完成初步的登入

--- a/cdc.sample.properties
+++ b/cdc.sample.properties
@@ -4,6 +4,10 @@ cdc-server.port=60512
 cdc-server.webAppName=cdc-server
 cdc-server.webAppRoot=/
 
-# [ IdWorker setting]
+# [ idWorker setting]
 id-worker.workerId=1
 id-worker.dataCenterId=1
+
+# [ admin account ]
+admin.name=admin
+admin.pass=c89904663282376758a3249dd302643a
