--- a/cdc-server/src/main/resources/log4j.properties
+++ b/cdc-server/src/main/resources/log4j.properties
@@ -18,4 +18,4 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH\:mm\:ss} [%c.%M\:%L] %m%n
 
 #设置mybatis打印sql日志，注意这里的mybatis与logPrefix相匹配
-# log4j.logger.com.doopp.youlin.dao=DEBUG
+# log4j.logger.com.doopp.cdc.dao=DEBUG
